Fixes in website (#17)
* Scale pfps and separate scroll boxes for comments and packs

* Change comment word-wrap to break-word

* use rem for profile picture scaling

* remove unneeded max-width on body

* make scroll boxes a smaller

* change overflow-x on sections to be auto

makes it look nicer on portrait mode screens, as before it cut off the second pack in the grid

* Bug fixes and improvements
Fix void
Hide scrollbar for comments and packs

* calculate height of sections with css

* add style to pack comment selection

* fix formatting issues from ios image to text

* fix formatting in packs.css

iOS image to text screwed up, should’ve caught the error

---------

--- a/src/dashboard/public/styles/base.css
+++ b/src/dashboard/public/styles/base.css
@@ -36,7 +36,18 @@ body {
 }
 
 body {
+    margin: 0;
     font-weight: 400;
     background-color: var(--background);
     color: var(--text);
+}
+
+html {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    width: 100%;
+    box-sizing: border-box;
 }
