--- a/src/dashboard/public/styles/packs.css
+++ b/src/dashboard/public/styles/packs.css
@@ -1,7 +1,12 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+}
+
 body {
     display: flex;
-    flex-direction: column;
-    margin: 0;
+    flex-flow: column;
     padding: 0 1rem;
 }
 
@@ -23,19 +28,31 @@ button {
 }
 
 main {
+    height: calc(100% - 5rem);
+
     display: flex;
-    height: 100%;
     gap: 1rem;
+
+    section {
+        padding-bottom: 1rem;
+
+        overflow-x: auto;
+        overflow-y: auto;
+
+        /* Hide scrollbar */
+        scrollbar-width: none;
+        ::-webkit-scrollbar{
+            display: none;
+        }
+    }
 }
 
 .comments {
     max-width: 24rem;
     display: flex;
     flex-direction: column;
-    padding-right: 1rem;
     position: sticky;
     top: 1rem;
-    height: min-content;
 
     form {
         display: flex;
@@ -54,6 +71,20 @@ main {
 
     select {
         font-size: 1rem;
+        border-radius: 1rem;
+        padding: 0.25rem;
+        background-color: oklch(from var(--accent) L C H / .8);
+        border: 0.125rem solid var(--primary);
+        color: var(--text);
+    }
+
+    #comments {
+        word-wrap: break-word;
+        
+        img {
+            height: 8rem;
+            width: 8rem;
+        }
     }
 }
 
@@ -106,8 +137,8 @@ main {
 }
 
 dialog {
-    width: 80%;
-    height: 80%;
+    width: 40%;
+    height: 40%;
     border: 0.125rem solid var(--accent);
     border-radius: 1rem;
 
